--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
     <header>
         <h1>Mark Tamke</h1>
-        <p>The Something</p>
+        <p>First Ever Anything</p>
     </header>
     <main>
         <article>
-            <h2>March 2, 2025</h2>
-            <p>Content goes here...</p>
+            <h2>March 3, 2025</h2>
+            <p>This is the first thing to ever be posted on my website. It's like Twitter
+                but only I can post on it. I'm only going to upload to it when I am hammered. 
+                Eventually I'll figure out how to put a big picture of Bill Cosby at the top
+                of the screen or something I don't know.</p>
         </article>
     </main>
 </body>
