--- a/index.html
+++ b/index.html
@@ -18,6 +18,37 @@
                 but only I can post on it. I'm only going to upload to it when I am hammered. 
                 Eventually I'll figure out how to put a big picture of Bill Cosby at the top
                 of the screen or something I don't know.</p>
+
+            <p> I feel like I am in a really transitional stage of my life, but I also think
+                I've thought the same thing every year for the past 7 years. I'm 20 now and I can't win 
+            a game of Fortnite for some reason. I haven't won a single game since I turned 20. I only ever play
+            cross-eyed drunk so that could have something to do with it</p>
+
+            <p> Getting broken up with is the same feeling for me as when I had no friends as a kid. For some reason I
+            mostly hung around retards whenever I went through periods of having no friends. Everybody talks about their friends
+            Like they have known them for their whole life, but I've met all of my best friends over the past 4 or so years.
+            It's not even like I got bullied, I don't know what it was. Everybody got bullied. A kid would shove you to the ground
+            at recess and tell a girl you had a crush on her, then invite you to his birthday party 20 minutes later. I think the worst part 
+            of it was I had no safe haven. Nobody at school was on my side, and so was nobody at home. Not like I was abused, I was just 
+            the youngest. I remember my parents being so shocked when I would get in trouble for bullying kids, I don't know how they
+            didn't realize where this issue may have stemmed from. These are the same people who pumped me with 70mg of Adderall at age 12.</p>
+
+            <p> I got sort of side tracked. But it's like when I was a kid I had nobody to talk to my feelings or really anything about.
+            Nobody in my family was my age, the ones who were I didn't see enough. All things considered I'm pretty lucky I didn't turn into some
+            incel-twitter-fag. Whenever a relationship ends it feels like nobody is around who gets you anymore. When I get low, which seems to be
+            the norm now, I don't have anybody to just rant to it about. I'd call my mom, but then she gets worried I'll off myself. I know I could still
+            probably call ex-girlfriend and talk to her, and she'd still probably listen, but I can't put myself through that. How do you remind yourself
+            that this person made the decision they don't want you anymore? I'm not still in love with her, I don't think she is with me, but I seethe
+            with jealousy at the thought of her with other people. I have no right.</p>
+
+            <p> Hopefully I'll get a new script soon and be able to focus better. I can barely get work done now. I'm basically a functioning alcoholic. 
+            I'm having money problems. I never knew of money problems growing up. This is my first time really experiencing this. I feel guilty mentioning
+            things related to my families money infront of friends at school, but it's hard to convince yourself that your family has money after growing up
+            around what I did. </p>
+
+            <p> I have not had a single stress free moment in probably 3 weeks, since I had my last panic attack. Something really changed in me that night.
+            I worry that was more of a psychotic break than it was a panic attack. Time will tell. This is the worst I've felt in a long time. I dont even 
+            really want to ski.</p>
         </article>
     </main>
 </body>
