--- a/index.html
+++ b/index.html
@@ -12,10 +12,44 @@
     </header>
     <main>
         <article>
-            <h2> test </h2>
+            <h2>March 3, 2025</h2>
+
+<p> Extra Tall Coffin </p>
+
+            <p> Today was a harder day than last. This is my own fault I refuse to take responsibility and get my work done when it is needed.
+            I am on the verge of a full blown panic attack and I don't know when it will happen. Feelings of self harm have never been 
+            something I have given any breath to, and I wll not now. I will feel better eventually, I know this, I just fear it 
+            may be some time. I wonder what percent of days in my life have been good days. I fear that last spring was the best time in my life.
+            I was also oblivious to the things going on around me. I fear that without intervention my situation will only worsen. I can barely
+            function as a human being as is. I don't know if I am lazy, depressed, or just losing my mind. </p>
+
+            <p> I did lose my mind once, I know how it feels. Feelings of paranoia are returning to my daily thoughts. I refuse to accept any love or 
+            kindness that is shown to me and I am not sure why. I still doubt the love anybody has ever had for me. I don't see myself as a likeable
+            person. I am offputting and mean. I insult those I care about most and embarrass myself infront of ones who I do not care about. I act
+            as if I am a confident person, but I just embarrass myself on purpose to make it seem like I am in control. My logic is you can't say anything
+            bad about me if I am being ridiculous on purpose. I don't know if this actually works. People likely just think i am being mean to them and
+            think I am better than them.</p>
+
+            <p> I'd be lying if I denied having narcissistic thoughts. I see myself as intellectually and physically superior to most anyone I meet, yet
+            these ideas are grounded in nothing. The truth is I am pretty fucking retarded. I'm not good at anything. I've been insulted for my 
+            intelligence my entire life. I was always the dumb friend, but I look at myself as lazy. I don't know where the idea I am good looking 
+            comes from either. Yes I have slept with a number of good looking women, but I don't know how I really pulled that off.</p>
+
+            <p>I feel uncomfortable in my tall body. 6 feet and 7 inches of pure nothing. I can't play basketball. I have always wished I could shrink down
+            to a more normal size. Even if I could lose just 3 or 4 inches I'd be happy. I feel I stick out and yet all I have ever wanted in my life 
+            is to fit in. This dream seems farfetched at this point. When I dream, I always look up. The people around me, in my biggest fantasies, are all 
+            taller than me. I don't know what that means, but it is probably not good.</p>
+
+            <p>I'm too hateful of a person. I turn my nose up at anyone who is different. I don't mean this in regards to race or sex or gender, just 
+            people fucking piss me off. I hate people who are truly unique. I can't tell if I am unique or not. Are there 1,000,000 people who fit the
+            same archetype as me? I don't doubt there are, but what is that archetype? I clash heads with people too similar to me, so I fear meeting
+            someone truly similar to me is impossible.</p>
+
+            <p> I'll go back to the doctor soon to talk more. I hope when I die flowers bloom from my grave. I hope I am not buried alone. Thats all
+            we really have.</p>
 
             
-            <h3>March 3, 2025</h3>
+            <h3>March 2, 2025</h3>
 
 <p>First Ever Anything</p>
             
